switch from maven shade to jpackage